--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,18 @@
 <resources>
-    <string name="app_name">duducar</string>
+    <string name="app_name">嘟嘟打车</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_main">MainActivity</string>
+
+    <!-- 登录 -->
+    <string name="app_login_show">手机</string>
+    <string name="app_login_password">验证码</string>
+    <string name="app_sign_in">登录</string>
+    <string name="app_sign_up">注册</string>
+    <string name="app_req_code">获取验证码</string>
+    <string name="app_fogot_password">忘记密码?</string>
+    <string name="login_erro_is_null">"用户名、密码不能为空"</string>
+    <string name="login_success">"登录成功"</string>
+    <string name="login_failure">"登录失败"</string>
 
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
@@ -16,4 +27,8 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_login">LoginActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_search">SearchActivity</string>
 </resources>
