--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="title_activity_post_order">PostOrderActivity</string>
+    <string name="title_activity_order_cab">OrderCabActivity</string>
 </resources>
