--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="title_activity_search">SearchActivity</string>
     <string name="title_activity_post_order">PostOrderActivity</string>
     <string name="title_activity_order_cab">OrderCabActivity</string>
+    <string name="title_activity_alipay">AlipayActivity</string>
 </resources>
